objects/ErrorLogAPI__c.object
<CustomObject>
    <label>Error Log API</label>
    <nameField>
        <label>ErrorLogAPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Log APIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Donor__c</fullName>
        <label>ObjectType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorStatus__c</fullName>
        <label>ErrorStatus</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>